Add pure work item processing orchestrator
Change-Id: Idaed1e98f5425e2ff66f42048169accd1db79d75